
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;


 int printf (char*,...) ;

__attribute__((used)) static void dump(const void *data, size_t size) {
 const uint8_t *p = data;
 const uint8_t *end = p + size;
 unsigned off = 0;
 while (p < end) {
  printf("%06x:  %02x", off & 0xffffff, *p++);
  for (unsigned i = 1; i < 16 && p < end; i++) {
   bool space = (i % 8) == 0;
   printf(" %s%02x", (space ? " " : ""), *p++);
  }
  printf("\n");
  off += 16;
 }
}
